@@ -1,3 +1,4 @@
+ - Don't include unistd.h
  - Change ::show() --> ::disp() everywhere
  - Clean out old quadrature classes on triangles and tetrahedra
  - Clean out old sparse matrix code
